--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,10 @@ body {
 .button-pointer {
   cursor: pointer;
 }
+
+#carouselButton {
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
+}
